# cmd-util

./: CMakeLists.txt  README.md
resources/cmake/: cmake_config.h.in
src/: main.c
src/structs/: cmd_array.h  struct_cmd.h
src/util/: pch.h
